--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,8 @@ author:
   avatar           : "profile.png"
   name             : "Stefan Oehmcke"
   pronouns         : "he/him"
-  bio              : "Professor for Visual and Analytic Computing in Ocean Technologies (VACOT). Research: spatio-temporal machine learning for environmental and marine applications."
+  bio              : "Professor for Visual and Analytic Computing in Ocean Technologies (VACOT)"
+  research         : "Spatio-temporal machine learning for environmental and marine applications"
   location         : "Rostock, Germany"
   employer         : "University of Rostock"
   uri              : "https://stefan_oehmcke.github.io"
