--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default"
 title                    : "Stefan Oehmcke"
 title_separator          : "-"
 name                     : &name "Stefan Oehmcke"
-description              : &description "Professor for Visual and Analytic Computing in Ocean Technologies (VACOT), University of Rostock & Assistant Professor, University of Copenhagen"
+description              : &description "Professor for Visual and Analytic Computing in Ocean Technologies (VACOT), University of Rostock"
 url                      : "https://StefOe.github.io"
 baseurl                  : ""
 repository               : "StefOe/StefOe.github.io"
