--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author:
   location         : "Rostock, Germany"
   employer         : "University of Rostock"
   employer_uri     : "https://www.ief.uni-rostock.de/fakultaet/institute-und-lehrstuehle/lehrende/institute/visual-and-analytic-computing/jun-prof-dr-rer-nat-stefan-oehmcke/"
-  employer_logo    : "uni-rostock.svg"
+  employer_logo    : "URO.svg"
   #uri              : ""
   email            : "stefan.oehmcke@uni-rostock.de"
 
